[package]
name = "compiler"
version = "0.1.0"
authors = ["spectreforge"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
doc = false
name = "compiler"

[build-dependencies]
cfgrammar = "0.12"
lrlex = "0.12"
lrpar = "0.12"
regex = "1.7.1"

[dependencies]
cfgrammar = "0.12"
lrlex = "0.12"
lrpar = "0.12"
regex = "1.7.1"
indexmap = "1.9.2"
lazy_static = "1.4.0"